made a lot of UI changes
added some functionality for dark theme (figured it wasn't worth it at a certain point). fixed logo scaling for the splash screen and app icon. got navigation pane color to work correctly. lowered size of borders for images on home page. centered text for events. added divider lines for news. updated department info page UI. removed logo from top left in nav pane, also adjusted white space between logo and "Home" button. changed color of text on home page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,5 +26,5 @@
         app:menu="@menu/activity_main_drawer"
         app:itemIconTint="#000000"
         app:itemTextColor="#FFFFFF"
-        app:itemTextAppearance="@style/NavMenuGroupText" />
+        app:subheaderTextAppearance="@style/NavMenuGroupText" />
 </androidx.drawerlayout.widget.DrawerLayout>
