--- a/app/src/main/res/layout/activity_department_information.xml
+++ b/app/src/main/res/layout/activity_department_information.xml
@@ -49,7 +49,8 @@
         app:menu="@menu/activity_main_drawer"
         app:headerLayout="@layout/nav_header_main"
         android:background="#00274C"
-        app:itemTextColor="#FFFFFF">
+        app:itemTextColor="#FFFFFF"
+        app:subheaderTextAppearance="@style/NavMenuGroupText">
 
     </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
