--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style
         name="NavMenuGroupText"
         parent="TextAppearance.MaterialComponents.Headline6">
-        <item name="android:textColor">#FFD700</item> <!-- Gold color for headings -->
+        <item name="android:textColor">@color/college_gold</item>
         <item name="android:textSize">14sp</item> <!-- Adjust size if needed -->
     </style>
 </resources>
