--- a/app/src/main/res/layout/activity_schedule_advisor.xml
+++ b/app/src/main/res/layout/activity_schedule_advisor.xml
@@ -67,7 +67,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                        android:layout_marginBottom="2dp">
 
                     <!-- Placeholder for Dynamic Content -->
                 </LinearLayout>
