--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -46,8 +46,7 @@
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:layout_marginBottom="16dp"
-                android:elevation="4dp"
-                android:onClick="openSignInPage">
+                android:elevation="4dp">
 
                 <TextView
                     android:id="@+id/SignInHeader"
