--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -38,6 +38,9 @@
                 <item
                     android:id="@+id/nav_scheduling_schedule_advisor"
                     android:title="@string/schedule_advisor" />
+                <item
+                    android:id="@+id/nav_scheduling_schedule_student"
+                    android:title="@string/schedule_student" />
             </menu>
         </item>
         <item
