Added building hours activity

--- a/app/src/main/res/layout/app_bar_building_hours.xml
+++ b/app/src/main/res/layout/app_bar_building_hours.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapsPage">
+    tools:context=".BuildingHours">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_maps_page" />
+    <include layout="@layout/content_building_hours" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
